[package]
name = "rustness"
version = "0.1.0"
authors = ["bugzmanov <bugzmanov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.2"
bitflags = "1.2.1"
byteorder = "1.3.4"
"lazy_static" = "1.4.0"
