[package]
name = "rustness"
version = "0.1.0"
authors = ["bugzmanov <bugzmanov@gmail.com>"]
edition = "2018"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rustness_rom"
path = "src/main.rs"


[lib]
name = "rustness"
path = "src/lib.rs"

# [[bin]]
# name = "snake"
# path = "src/snake.rs"

[dev-dependencies]
pretty_assertions = "0.6.1"

[dependencies]
hex = "0.4.2"
bitflags = "1.2.1"
byteorder = "1.3.4"
lazy_static = "1.4.0"

nom = "=5.1.1"

[workspace]
members = [
    "snake",
]