[package]
name = "native"
version = "0.1.0"
authors = ["bugzmanov <bugzmanov@gmail.com>"]
path="src/pattern_rtable.rs"
edition = "2018"
default-run="nes"
# default-run="palette"

[[bin]]
name = "palette"
path = "src/pattern_table.rs"

[[bin]]
name = "nes"
path = "src/main.rs"

[dependencies]
sdl2 = "0.34.0"
rustness = { path = ".." } 
rand = "=0.7.3"
